Closed Bug 1323079 Opened 9 years ago Closed 8 years ago

Intermittent dom/media/tests/mochitest/test_peerConnection_trackDisabling_clones.html | Test timed out.

Categories

(Core :: WebRTC, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- unaffected
firefox52 --- unaffected
firefox53 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: pehrsons)

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

This is timing out when checking remote video for being black while disabled locally. After disabling we only send one disabled frame. We might have to change that to send more, at a lower rate perhaps, since with packet loss the remote side might never receive the black frame, or with high load on the sender or with low bandwidth it might never get sent.
Rank: 35
Priority: -- → P3
Having disable get a black frame across is moderately important; bumping to low p2
Rank: 35 → 27
Priority: P3 → P2
Assignee: nobody → pehrson
Status: NEW → ASSIGNED
Comment on attachment 8822195 [details] Bug 1323079 - Send disabled frames no more often than 1 FPS over WebRTC. https://reviewboard.mozilla.org/r/101174/#review102920 ::: media/webrtc/signaling/src/mediapipeline/MediaPipeline.cpp:199 (Diff revision 1) > return; > } > > - disabled_frame_sent_ = true; > + disabled_frame_sent_ = t; > } else { > - disabled_frame_sent_ = false; > + // This sets it to the null moment. "to the Null time"
Attachment #8822195 - Flags: review?(rjesup) → review+
Pushed by pehrsons@gmail.com: https://hg.mozilla.org/integration/autoland/rev/4d0fd553e1d0 Send disabled frames no more often than 1 FPS over WebRTC. r=jesup
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: