Bug 1323079 - Send disabled frames no more often than 1 FPS over WebRTC. r=jesup

MozReview-Commit-ID: EoVLutIXkXV